# oslolo

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: ARCHITECTURE.md  INSTALLATION.md  USER_GUIDE.md
packaging/linux/: oslolo.desktop
packaging/macos/: setup.py
packaging/windows/: installer.nsi
scripts/: benchmark.py  build.py  test.py  translate.py
src/oslolo/: __init__.py  main.py
src/oslolo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oslolo/cli/: __init__.py
src/oslolo/cli/commands/: __init__.py  create.py  extract.py  list.py
src/oslolo/core/: __init__.py  archive_manager.py  compression_engine.py  format_detector.py
src/oslolo/core/crypto/: __init__.py  encryption.py
src/oslolo/core/format_handlers/: __init__.py  base_handler.py  rar_handler.py  sevenzip_handler.py  tar_handler.py  zip_handler.py
src/oslolo/gui/: __init__.py
src/oslolo/gui/components/: __init__.py  drag_drop_area.py  file_tree.py  progress_bar.py
src/oslolo/gui/controllers/: __init__.py  main_controller.py
src/oslolo/gui/views/: __init__.py  main_window.py
src/oslolo/launchers/: __init__.py  cli_launcher.py  gui_launcher.py  tui_launcher.py
src/oslolo/resources/styles/: dark_theme.qss  light_theme.qss
src/oslolo/tui/: __init__.py  app.py
src/oslolo/utils/: __init__.py  config_manager.py  logger.py
tests/: __init__.py  test_core.py  test_gui.py  test_tui.py
tests/integration/: test_multiplatform.py
tests/performance/: test_large_archives.py
(+9 files in other folders)
