
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oslolo"
version = "1.0.0"
authors = [
    { name="Universidad Team", email="team@universidad.edu" },
]
description = "Universal Archive Manager with GUI, TUI, and CLI modes, inspired by WinRAR and Norton Commander."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "py7zr>=0.21.0",
    "rarfile>=4.1",
    "libarchive-c>=4.0",
    "cryptography>=42.0",
    "click>=8.1.7",
    "textual>=0.58.0",
    "rich>=13.7.1",
    "PyQt6>=6.7.0",
    "QtAwesome>=1.3.1",
    "qdarkstyle>=3.2.3",
    "psutil",
    "send2trash",
]

[project.scripts]
oslolo = "oslolo.main:entry_point"
